--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/checkbox": "^0.5.14",
+    "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "@reduxjs/toolkit": "^1.9.0",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
+    "react-lottie": "^1.2.3",
     "react-native": "0.70.6",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
